Fix ExportCommand test cases to correctly handle and validate relative paths
- Updated ExportCommandTest to interpret relative paths without directory specification as relative to the project root
- Added checks to validate export success messages match expected paths
- Cleaned up test files after execution